完成点击电影海报--》查看电影详情--》发布影评的流程逻辑

--- a/client/app.wxss
+++ b/client/app.wxss
@@ -2395,8 +2395,9 @@ page {
         height: 485rpx;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 10;
-        overflow: hidden; }
+         /*-webkit-line-clamp: 10; */
+        overflow:auto;
+      }
     .detail-page .detail-main-box .film-review-btns {
       display: flex;
       padding: 0 80rpx 50rpx; }
