--- a/client/pages/editFilmReview/editFilmReview.wxml
+++ b/client/pages/editFilmReview/editFilmReview.wxml
@@ -1,18 +1,19 @@
 <!--pages/editFilmReview/editFilmReview.wxml-->
 <view class="detail-page">
-    <view class="detail-main-box">
-        <image class="film-poster" src="/images/p2517753454.jpg"></image>
-        <view class="film-synopsis">
-            <view class="film-name">复仇者联盟3：无限战争</view>
-                      <view class="film-main">
-               <textarea class="film-review-text" placeholder="输入你的影评内容..."></textarea>
-               <button class="tape" bind:touchstart="start" bind:touchend="stop">
-                   <i class="fa fa-microphone"></i>
-                   录音
-               </button>
-           </view>
+    <form bindsubmit="onTapToFilmReview">
+        <view class="detail-main-box">
+            <image class="film-poster" src="{{filmDetail.image}}"></image>
+            <view class="film-synopsis">
+                <view class="film-name">{{filmDetail.title}}</view>
+                <view class="film-main">
+                    <textarea   name="textarea" class="film-review-text" placeholder="输入你的影评内容..."></textarea>
+                    <button class="tape" bind:touchstart="start" bind:touchend="stop">
+                        <i class="fa fa-microphone"></i>
+                        录音
+                    </button>
+                </view>
+            </view>
         </view>
-     
-    </view>
-        <view class="complete" bind:tap="onTapToFilmReview">完成</view>
+        <button   class="complete"  form-type="submit">完成</button>
+    </form>
 </view>
