--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -1,11 +1,11 @@
 <!--pages/recommend/recommend.wxml-->
 <view class="recommend-pages">
     <view class="movie-poster">
-        <image class="poster-img" src="/images/p2517753454.jpg" bind:tap="onTapToDetail"></image>
-        <view class="poster-text">复仇者联盟3：无限战争</view>
+        <image class="poster-img" src="{{randomViewFilm.image}}" data-id="{{randomViewFilm.id}}" bind:tap="onTapToDetail"></image>
+        <view class="poster-text">{{randomViewFilm.title}}</view>
         <view class="recommend-person">
-            <image class="avatar" src="/images/p2517753454.jpg" bind:tap="onTapToFilmReviewDetail"></image>
-            <text>余慧珍给你推荐了一部电影</text>
+            <image class="avatar" src="/images/avatar.jpg" bind:tap="onTapToFilmReviewDetail"></image>
+            <text>修给你推荐了一部电影</text>
         </view>
     </view>
     <view class="bottom-navigation">
