--- a/client/pages/filmReviewDetail/filmReviewDetail.wxml
+++ b/client/pages/filmReviewDetail/filmReviewDetail.wxml
@@ -1,17 +1,17 @@
 <!--pages/filmReviewDetail/filmReviewDetail.wxml-->
 <view class="detail-page">
     <view class="detail-main-box">
-        <image class="film-poster" src="/images/p2517753454.jpg"></image>
+        <image class="film-poster" src="{{filmDetail.image}}"></image>
         <view class="film-synopsis">
-            <view class="film-name">复仇者联盟3：无限战争</view>
+            <view class="film-name">{{filmDetail.title}}</view>
             <view>
-                <image class="avatar" src="/images/p2517753454.jpg"></image>
-                <text>余慧珍的影评</text>
+                <image class="avatar" src="{{reviewDetail.avatar}}"></image>
+                <text>{{reviewDetail.userName}}的影评</text>
             </view>
             <view class="commit-text">
                 <view class="quote">"</view>
                 <view class="film-main">
-                    单身狗坚实的火龙果速度快就更好了速度快该代理商开个会理科生道格拉斯的快感和塑料袋可感受到了给客户单身狗坚实的火龙果速度快就更好了速度快该代理商开个会理科生道格拉斯的快感和塑料袋可感受到了给客户单身狗坚实的火龙果速度快就更好了速度快该代理商开个会理科生道格拉斯的快感和塑料袋可感受到了给客户
+                    {{reviewDetail.content}}
                 </view>
             </view>
         </view>
