增加影评发布流程的相关逻辑

--- a/client/app.wxss
+++ b/client/app.wxss
@@ -2418,5 +2418,12 @@ page {
   border: 1rpx solid #CBD5DD; }
   .film-review-audio .fa {
     margin-right: 5rpx; }
-
+.tape {
+  width:170rpx;
+color:#94A9BB;
+background:#fff;
+font-size:24rpx;
+margin-top:30rpx;
+text-align: left;
+}
 /*# sourceMappingURL=app.wxss.map */
