--- a/client/pages/filmReviewList/filmReviewList.wxml
+++ b/client/pages/filmReviewList/filmReviewList.wxml
@@ -7,7 +7,17 @@
                     <image class="avatar" src="{{item.avatar}}"></image>
                     <text>{{item.userName}}的影评</text>
                 </view>
-                <view class="film-review-text">{{item.content}}</view>
+                <view class="film-review-text">
+                <block wx:if="{{item.tempFilePath !=='null'}}">
+                            <button class="tape" bind:tap="onPlay" >
+                                <i class="fa fa-play-circle"></i>
+                                    {{item.duration}}S
+                            </button>
+                    </block>
+                    <block wx:else>
+                        {{item.content}}
+                    </block>
+                </view>
             </view>
         </block>
     </view>
