--- a/client/pages/filmReview/filmReview.wxml
+++ b/client/pages/filmReview/filmReview.wxml
@@ -13,7 +13,7 @@
                 <view class="film-main">
                 <!-- todo:样式调整。及播放功能 -->
                 
-                    <block wx:if="{{!!reviewDetail.tempFilePath}}">
+                    <block wx:if="{{!!reviewDetail.tempFilePath && reviewDetail.tempFilePath !== 'null'}}">
                             <button class="tape" bind:tap="onPlay" >
                                 <i class="fa fa-play-circle"></i>
                                     {{reviewDetail.duration}}S
